--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: Jasmine's Docs
-site_url: https://jasmine333333.github.io/
+site_name: My Docs
+site_url: https://mydoma.org/mysite
 theme:
   name: material
   palette:
